--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Chivo:300,400,700&display=swap&subset=latin-ext"
       rel="stylesheet"
     />
 
